✨ General improvements